--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   flutter_bloc: ^7.2.0
+  rxdart: ^0.27.1
 
 dev_dependencies:
   mockito: ^5.0.8
