--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
 
 dev_dependencies:
   mockito: ^5.0.8
+  mocktail: ^0.2.0
   build_runner: ^2.0.4
   bloc_test: ^8.0.0
   integration_test:
