add firebase analytic and crashlytic

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,7 +53,11 @@ android {
 flutter {
     source '../..'
 }
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    //implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
